# flutter_kaldi_libs

./: .gitattributes  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/flutter_kaldi_libs/: FlutterKaldiLibsPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_kaldi_libs_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
ios/: flutter_kaldi_libs.podspec
ios/Classes/: FlutterKaldiLibsPlugin.h  FlutterKaldiLibsPlugin.m  FlutterKaldiLibsPlugin.swift  SwiftFlutterKaldiLibsPlugin.swift
lib/: flutter_kaldi_libs.dart  flutter_kaldi_libs_method_channel.dart  flutter_kaldi_libs_platform_interface.dart
linux/: CMakeLists.txt  flutter_kaldi_libs_plugin.cc
linux/include/flutter_kaldi_libs/: flutter_kaldi_libs_plugin.h
test/: flutter_kaldi_libs_method_channel_test.dart  flutter_kaldi_libs_test.dart
